add new TESS sketchfab
Former-commit-id: 9aac893e3a3012bafec33c020516781c128440bf [formerly a7dac42dbed3c1573993c6346cb18c48c99dd648]
Former-commit-id: b23b9dd60affd51644c8c3f4f37591f52accd2ed

--- a/index.html
+++ b/index.html
@@ -508,12 +508,12 @@ a different place. All the current models and the mission timelines for them are
 				</p>		
 				<br class="clearboth">
 				<div class="floatL pad15">
-					<iframe width="640" height="480" src="https://sketchfab.com/models/e15b90ff23b14041850c8433a3a47e3e/embed" 
+					<div class="sketchfab-embed-wrapper">
+					<iframe width="640" height="480" src="https://sketchfab.com/models/1be68b1079b54315809e2be3ea8d1a6d/embed" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+					</div>
 				</div>
 				<p class="blackwide">
-					This model had some problems on Sketchfab and is being reprocessed. Please stand by.
-					<br>
 					The TESS, the Thermal Energy Storage System, is a centerpiece of this approach. It provides electricity generation 
 					both day and night. It captures vapors of pure oxygen, and chemicals 
 					such as oxides of potassium, phosphorus, and sodium - all very useful. The pond of lava depleted in these chemicals can be drawn off at the 
