revise marker text
Former-commit-id: fcf90e80ca8938502004c0b92447a2f07ef2055b

--- a/index.html
+++ b/index.html
@@ -122,29 +122,34 @@ rel='stylesheet' type='text/css'>
 						Rare Earth Elements, and Phosphorus. 
 						Most of the Moon has only traces of K and P, even less of REE. 
 						K and P are necessary for 
-						plant growth. 
+						plant growth.
 						The rare earth elements neodymium and 
-						samarium are used for making high-strength magnets - which in 0.16 g could do lots of neat stuff. Even better, 
-						once industry is established, thorium can be used for building nuclear thermal rockets (NTRs). 
-						NTRs are a lot more powerful and efficient than anything in use today, but they have never been built 
-						because of the politics of radiation risk. Not a problem on the Moon.
+						samarium are used for making high-strength magnets - which in 0.16 g could do lots of neat stuff. 
+						Thorium can be processed into fuel for nuclear rocket engines.
 					</span>
 					</button>
 					<button class="numbers tooltipBMR" style="top: 62%; left: 62%;">2
-					<span>As with all other sites that were considered, this site is on the 'shore' of a basalt mare. Both mare 
-					and highland materials 
-					are in the immediate vicinity. Unlike the other sites, this very young crater very probably punched 
-					through both materials. 
-					Bedrock of both minerologies should be within easy reach, relatively speaking.
-					</span>
+						<span>As with all other sites that were considered, this site is on the 'shore' of a basalt mare. Both mare 
+						and highland materials 
+						are in the immediate vicinity. Unlike the other sites, this very young crater very probably punched 
+						through both materials. 
+						Bedrock of both mineralogies should be within easy reach, relatively speaking.
+						</span>
 					</button>
-					<button class="numbers tooltipBR" style="top: 10%; left: 55%;">3
-					<span>About another 100 km north is the equator. This site is close enough to the equator that putting 
-					a fuel depot in orbit above it would work well. Efficient trajectories to rendezvous with it would 
-					be available daily, less ideal ones almost hourly. The further you are from the equator, the less frequently 
-					rendezvous in orbit is possible. (At the poles you could do it as long as you could reorient your direction 
-					of launch easily, though.)
-					</span>
+					<button class="numbers tooltipBR" style="top: 43%; left: 60%;">3
+						<span>
+						<img src="http://moonwards.com/img/lalange-titanium.jpg" alt="high concentrations of titanium near Lalande crater">
+						This combination of Clementine mission camera data suggests high concentrations of titanium in some areas of Lalande, 
+						probably in the form of ilmenite. 
+						That is a mineral with the formula FeTiO3 that can be processed with hydrogen to produce iron, water, and titanium dioxide.
+						</span>
+					</button>
+					<button class="numbers tooltipBR" style="top: 10%; left: 55%;">4
+						<span>About another 100 km north is the equator. Something in a near equatorial orbit would be accessible to 
+						Lalande a few times a day. 
+						Things at the poles have that kind of access as well, to things in a polar orbit. Things in other places 
+						have to deal with plane changes and orbital dynamics that requires more fuel and far fewer rendezvous opportunities.
+						</span>
 					</button>
 				<img src="http://moonwards.com/img/LalandeRegion.svg" alt="Lalande Crater overview">
 			 	
@@ -153,7 +158,7 @@ rel='stylesheet' type='text/css'>
 			</div>
 			<div class="col-4 col-m-4"> 
 				<div class="darkYellow pix">
-						<button class="numbers tooltipB" style="top: 25%; left: 66%;">4
+						<button class="numbers tooltipB" style="top: 25%; left: 66%;">5
 							<span>Here is a collection of especially large boulders, 10 to 30 
 							m across above the surface. They are all partially submerged and so 
 							some will be larger below the surface. 
@@ -166,7 +171,7 @@ rel='stylesheet' type='text/css'>
 							radiation shielding, and feedstock for refining processes.
 							</span>
 						</button>
-						<button class="numbers tooltipBBL" style="top: 18%; left: 45%;">5
+						<button class="numbers tooltipBBL" style="top: 18%; left: 45%;">6
 						<span>Case in point - the boulders with the especially long shadows just left of the 
 						marker. They are huge, the size of barns. They are so useful, the first phase of 
 						the initial base will go here, nestled against them. Their stability and height 
@@ -175,7 +180,7 @@ rel='stylesheet' type='text/css'>
 						referred to so much i've named them Gibraltar, because they are anchors.
 						</span>
 						</button>
-						<button class="numbers tooltipB" style="top: 48%; left: 51%;">6
+						<button class="numbers tooltipB" style="top: 48%; left: 51%;">7
 						<span>
 						Here is a fresh crater, right beside Lalande which is 
 						also a fresh crater. 
@@ -193,7 +198,7 @@ rel='stylesheet' type='text/css'>
 			</div>
 			<div class="col-4 col-m-4">
 				<div class="darkYellow pix">
-					<button class="numbers tooltipML" style="top: 54%; left: 4%;">7
+					<button class="numbers tooltipML" style="top: 54%; left: 4%;">8
 							<span>
 								<img class="tooltip-img" src="http://moonwards.com/img/debrisField.jpg" 
 								alt="boulders and debris reaching 
@@ -210,21 +215,13 @@ rel='stylesheet' type='text/css'>
 							could be bedrock, possibly good ore without digging.  
 							</span>
 					</button>
-					<button class="numbers tooltipL" style="top: 40%; left: 10%;">8
-							<span>
-							The spaceport will 
-							be outside the crater where there is plenty of flat space, as will processing 
-							plants that use sunlight for heat and power, because the day is shorter 
-							in the crater's depths. 
-							Mining will be deep in the crater, 
-							where pure ores can be taken from the bedrock.
-							Once construction of objects in space 
-							begins, Cernan's Promise would be launching so much stuff a cable car system between the 
-							two places would be a good idea. The shelves here aid in construction 
-							of such a system.
+					<button class="numbers tooltipML" style="top: 30%; left: 50%;">9
+							<span>A spaceport is best placed on flat ground far away from other installations. 
+							Rockets can crash on landing or explode on launch - hopefully very rarely, but you 
+							know how it is. This spot is 4 km from all planned structures. 
 							</span>
 					</button>
-					<button class="numbers tooltipML" style="top: 75%; left: 70%;">9
+					<button class="numbers tooltipML" style="top: 75%; left: 70%;">10
 							<span>
 							This hill is the beginning of the highlands, the light areas on the Moon's 
 							surface. They are much older than the dark areas, the maria, which were created 
@@ -253,41 +250,40 @@ rel='stylesheet' type='text/css'>
 	<div class="rowR darkYellow">
 		<div class="col-12 col-m-12">
 					<div class="darkYellow pix">
-					<button class="numbers tooltipBL" style="top: 37%; left: 70%;">10
+					<button class="numbers tooltipBL" style="top: 37%; left: 70%;">11
 						<span>The bits poking out furthest from the crater wall are just emerging from shadow in this shot. 
 						The sun was 37<sup>o</sup> above the horizon at this moment, so the angle of the crater wall must be 
 						just about the same - and just a little steeper in this puddle of black the marker is on top of. 
 						Let's say 40% here. This is a good, steep, long grade. Not very common on the Moon.
 						</span>
 					</button>
-					<button class="numbers tooltipBL" style="top: 47%; left: 70%;">11
+					<button class="numbers tooltipBL" style="top: 47%; left: 70%;">12
 						<span>
 						That tiny speck just on the rim at right is Gibraltar. 
 						</span>
 					</button>
-					<button class="numbers tooltipML" style="top: 55.5%; left: 72.5%;">12
+					<button class="numbers tooltipML" style="top: 55.5%; left: 72.5%;">13
 						<span>
 							<img class="tooltip-img" style="float: left;" src="http://moonwards.com/img/Teacup250.jpg">
 						And here's Teacup Crater. To its right you can faintly see a line where the raised ground by the 
-						crater rim stops, and flatter ground begins. Hopefully that would be an adequate landing spot. 
-						The image here shows it has a very soft rim and no floor, the incline of its sides just meet. 
-						That indicates loose material is deep enough to have slumped down its walls and fill in the floor. 
-						If it wasn't right on the rim of a crater 24 km across, it would look like a crater much older than 
-						Lalande. But if that was the case the impact that made Lalande would have destroyed it. At any rate, 
-						compared to most of the Moon, this shows the regolith here is deep.
+						crater rim stops, and flatter ground begins. 
+						Hopefully that would be an adequate landing spot for the first missions. 
+						It has a soft rim and no floor, the incline of its sides just meet. 
+						That may indicate the top layer of granular regolith is deeper than it is, so over 40 m. 
+						Recent modelling has shown the ground sort of folds back on itself on the lips of craters, which 
+						would make the granular layer twice the depth it had before.
 						</span>
 					</button>
-					<button class="numbers tooltipBR" style="top: 22%; left: 35%;">13
+					<button class="numbers tooltipBR" style="top: 22%; left: 35%;">14
 						<span>This looks like bedrock. Up close, there is surely a layer of moondust over it, but not a lot. 
 						Maybe a meter or so, easily dug away on a grade like this. In bedrock, you find minerals much purer 
 						than the regolith on the surface. It hasn't been mixed over the aeons by meteor impacts that toss 
-						particles all over the planet. On the Moon, minerals probably come in layers, not veins like 
-						on Earth. If you find a layer of rich ore, it probably extends over a large area. Around here the 
-						jackpot is layers highly concentrated in KREEP minerals and the layer with the thorium. All around 
-						the crater wall, down where there is bedrock, is ripe for mining. 
+						particles all over the planet. On the Moon, minerals could come in layers, not veins like 
+						on Earth. If you find a layer of rich ore, it could extend over a large area. Around here the 
+						jackpot would be layers highly concentrated in KREEP minerals and thorium.  
 						</span>
 					</button>
-					<button class="numbers tooltipMR" style="top: 52%; left: 4%;">14
+					<button class="numbers tooltipMR" style="top: 52%; left: 4%;">15
 						<span>
 						<img class="tooltip-img" src="http://moonwards.com/img/lalande-skylight-3frame.jpg" 
 						alt="3 views of lalande skylight">
@@ -301,10 +297,10 @@ rel='stylesheet' type='text/css'>
 						its surface. 
 						</span>
 					</button>
-					<button class="numbers tooltipR" style="top: 71%; left: 36%;">15
+					<button class="numbers tooltipR" style="top: 71%; left: 36%;">16
 						<span>
 						<img class="tooltip-img" src="http://moonwards.com/img/lal-lava-tube1.jpg" alt="possible lava tube">
-						Here is an example of the same phenomenon as #14, much closer to Cernan's Promise. 
+						Here is an example of the same phenomenon as #15, much closer to Cernan's Promise. 
 						These are called lava tubes, because they were made as the lava produced by the meteor 
 						impact that created Lalande cooled. Or at least, these mostly look like lava <i>cracks</i>, 
 						but the one on the left could be covering over a tube, perhaps. If so, it is quite long, but 
@@ -316,7 +312,7 @@ rel='stylesheet' type='text/css'>
 						deep into it do these voids exist?
 						</span>
 					</button>
-					<button class="numbers tooltipR" style="top: 50%; left: 39%;">16
+					<button class="numbers tooltipR" style="top: 50%; left: 39%;">17
 						<span>
 						<img class="tooltip-img" src="http://moonwards.com/img/lal-lava-tube2.jpg">
 						These fissures go all the way from the base of the crater wall to the hill to the left 
@@ -329,7 +325,7 @@ rel='stylesheet' type='text/css'>
 						there might be voids deeper down that remain sealed. 
 						</span>
 					</button>
-					<button class="numbers tooltipR" style="top: 51%; left: 23.5%;">17
+					<button class="numbers tooltipR" style="top: 51%; left: 23.5%;">18
 						<span>
 						On either side of the marker are the domes shown in the picture. They remind me of the 
 						bubbles that appear on the surface of batter or cans of paint. It makes me think of 
@@ -340,7 +336,7 @@ rel='stylesheet' type='text/css'>
 						<img class="tooltip-img" src="http://moonwards.com/img/lal-domes.jpg">
 						</span>
 					</button>
-					<button class="numbers tooltipR" style="top: 58%; left: 21%;">18
+					<button class="numbers tooltipR" style="top: 58%; left: 21%;">19
 						<span>
 						<img class="tooltip-img" src="http://moonwards.com/img/lal-dark-material.jpg">
 						These hills, which mark the central upwelling that occurs in craters of this size as the 
@@ -354,7 +350,7 @@ rel='stylesheet' type='text/css'>
 						are awfully large for that explanation.
 						</span>
 					</button>
-					<button class="numbers tooltipTR" style="top: 62%; left: 18%;">19
+					<button class="numbers tooltipTR" style="top: 62%; left: 18%;">20
 						<span>
 						<img class="tooltip-img" src="http://moonwards.com/img/blackLalande.jpg" alt="black material in Lalande crater">
 						Okay, there is one very tantalizing possible explanation, though it is very 
