small additon to the introduction to orbital mechanics
Former-commit-id: b3d9d9d7aaea4b443c98864e3ce7604cfafe7e2c

--- a/learn.html
+++ b/learn.html
@@ -214,9 +214,11 @@ A calculator implementation of this equation is at the top of this page.<br></p>
 			<p>The amount of energy that can be stored as chemical compounds is limited, and chemical rockets are also forced to use less than optimal exhaust products as reaction mass. In general, ligther molecules are better, but no chemical reaction that produces large amount energy also produce hydrogen gas. Nuclear engines bypass this issue by using a reactor to heat the flow of propellant, making use of hydrogen gas possible, this makes the exhaust velocity twice as large as chemical rockets. On the other hand, they often has lower thrust.
 			</p>
 			<h6>Ion engines</h6>
-			<p>TODO</p>
+			<p>If high thurst is not a concern, for instance when the maneuverer can take weeks or months, ion engines can be used. They work by using magnetic or electrostatic forces to accelerate an ionized gas, causing it to reach a very high velocity. This type of engine uses a lot of electricity and the thrust is low, but the efficiency can be far better than both chemical and nuclear rocket engines. A possible use is a cargo craft slowly spiraling between the Moon and low Earth orbit.
+			</p>
 			<h6>Solar sails</h6>
-			<p>TODO</p>
+			<p>It is technically not necessary to expand propellant. A solar sail uses the minuscle pressure light exerts when it hits something. If you have a very thin and large sail, this force can be used for transportation or station keeping ("hoovering"). The light can also be supplied by external lasers to increase performance, giving $6.67 \cdot 10^{-9} N/W$ for a reflective sail. Solar sails are direction sensitive as they can not tack directly towards the light source. 
+			</p>
 			<h5>Orbit terminology:</h5>
 			<img class="realsize" src="img/orbit.png" height="519">
 		    </div>
