--- a/learn.html
+++ b/learn.html
@@ -221,6 +221,12 @@ A calculator implementation of this equation is at the top of this page.<br></p>
 			</p>
 			<h5>Orbit terminology:</h5>
 			<img class="realsize" src="img/orbit.png" height="519">
+			<p>The following terms are important when describing an orbit:</p>
+			<ul>
+				<li><b>Periapsis:</b> The point where the oribiting craft is <i>closest</i> to the object it orbits.</li>
+				<li><b>Apoapsis:</b> The point where the oribiting craft is <i>farthest</i> from the object it orbits.</li>
+				<li><b>Semi-major axis:</b> The largest central radius of an ellipse. This is half the distance between the periapsis and apoapsis. Often shortened to $a$.</li>
+			</ul>
 		    </div>
 		</div>
             <div class="col-12 col-m-12">     
