--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/cssportal.tooltip.css">
 <link rel="stylesheet" href="css/main.css">
-<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,400italic,600,200'
-rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,400i,700" rel="stylesheet">
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/modernizr-2.8.3.min.js"></script>
