--- a/learn.html
+++ b/learn.html
@@ -198,7 +198,12 @@ rel='stylesheet' type='text/css'>
 			<p>However, when we want to change our spacecraft's orbit, we have to change our velocity, thus draining from our Delta-v budget. A spacecraft always has a limited amount of Delta-v, so making transfers between orbits as cheap as possible is a major considerations in  spacecraft navigation.</p>
 			<p>Every way of changing the velocity of a spacecraft is based upon the conservation of momentum. That is, if you take every object in a system, multiply their mass and velocity, and take their sum, the value you get is constant. That means throwing propellant in one direction causes something else in to move in the opposite direction in order to keep the momentum constant. That "something" is your spacecraft.</p>
 			<p>The obvious limitation should then be clear: We have a limited amount of propellant to trow away. Making the propellant go faster makes the required amount smaller, so that helps. This is the <b>exhaust velocity of the rocket</b>. Another measure for the exact same thing is <b>Isp</b> (specific impulse). That is just the exhaust velocity divided by the standard gravity at sea level (9.81 m/s²). Here is our first important equation, used to calculate Delta-v:
-$$\Delta v=v_e \cdot ln\left(\frac{m_{initial}}{m_{final}}\right)$$
+$$
+\Delta v=v_e \cdot ln\left(\frac{m_{initial}}{m_{final}}\right)
+\iffalse
+Seeing gibberish here instead of an equation? Seems like we screwed up. Please contact us
+\fi
+$$
 This is the Tsiolkovsky rocket equation. Tsiolkovsky figured out how rockets worked <i>before</i> planes where invented. Let us see how it works:<br>
 $v_e$ is the exhaust velocity<br>
 $m_{initial}$ is the mass of the entire spacecraft before you start the burn<br>
@@ -227,6 +232,10 @@ A calculator implementation of this equation is at the top of this page.<br></p>
 				<li><b>Apoapsis:</b> The point where the oribiting craft is <i>farthest</i> from the object it orbits.</li>
 				<li><b>Semi-major axis:</b> The largest central radius of an ellipse. This is half the distance between the periapsis and apoapsis. Often shortened to $a$.</li>
 			</ul>
+			<h5>Let us then get started with the math!</h5>
+			<p>We have a spacecraft orbiting in a circular orbit. What is its velocity?
+$$v=\sqrt{\frac{\mu}{r}}$$
+			</p>
 		    </div>
 		</div>
             <div class="col-12 col-m-12">     
