--- a/learn.html
+++ b/learn.html
@@ -200,9 +200,7 @@ rel='stylesheet' type='text/css'>
 			<p>The obvious limitation should then be clear: We have a limited amount of propellant to trow away. Making the propellant go faster makes the required amount smaller, so that helps. This is the <b>exhaust velocity of the rocket</b>. Another measure for the exact same thing is <b>Isp</b> (specific impulse). That is just the exhaust velocity divided by the standard gravity at sea level (9.81 m/s²). Here is our first important equation, used to calculate Delta-v:
 $$
 \Delta v=v_e \cdot ln\left(\frac{m_{initial}}{m_{final}}\right)
-\iffalse 
-Seeing gibberish here instead of an equation? Seems like we screwed up. Please contact us 
-\fi
+%Seeing gibberish here instead of an equation? Seems like we screwed up. Please contact us 
 $$
 This is the Tsiolkovsky rocket equation. Tsiolkovsky figured out how rockets worked <i>before</i> planes where invented. Let us see how it works:<br>
 $v_e$ is the exhaust velocity<br>
