--- a/learn.html
+++ b/learn.html
@@ -26,8 +26,7 @@
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/cssportal.tooltip.css">
-<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,400italic,600,200'
-rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,300i,400,400i,600" rel="stylesheet">
 <style>
 	input, button {
 	color: black;
