--- a/planning.html
+++ b/planning.html
@@ -27,8 +27,7 @@
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/cssportal.tooltip.css">
 <link rel="stylesheet" href="css/accordian.css">
-<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,400italic,600,200'
-rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,300i,400,400i,600" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
