explaining the gravitational parameter
Former-commit-id: 4a188c280b875f533521e392d3bd5bbf19a4e5a2

--- a/learn.html
+++ b/learn.html
@@ -232,6 +232,14 @@ A calculator implementation of this equation is at the top of this page.<br></p>
 			<h5>Let us then get started with the math!</h5>
 			<p>We have a spacecraft orbiting in a circular orbit. What is its velocity?
 $$v=\sqrt{\frac{\mu}{r}}$$
+$v$ is of course the velocity. $\mu$ is the gravitational parameter. You would often see that as $GM$, which is the same thing. That is the mass of the object you are orbiting ($M$) multiplied with the gravitationa constant ($G=6.674 \cdot 10^{-11} \frac{m^3}{kg s^2}$).
+			</p>
+			<p>To save you some time:</p>
+			<ul>
+				<li>$\mu _{Earth}=3.98600441 \cdot 10^{14} \frac{m^3}{s^2}$</li>
+				<li>$\mu _{Moon}=4.9048695 \cdot 10^{12} \frac{m^3}{s^2}$</li>
+				<li>$\mu _{Sun}=1.32712440018 \cdot 10^{20} \frac{m^3}{s^2}$</li>
+			</ul>
 			</p>
 		    </div>
 		</div>
