--- a/learn.html
+++ b/learn.html
@@ -244,7 +244,7 @@ $v$ is of course the velocity. $\mu$ is the gravitational parameter. You would o
 			<p>Using that information, we can calculate things like the orbital velocity in low Earth orbit: $\sqrt{\frac{\mu _{Earth}}{r_{LEO}}}=\sqrt{\frac{3.986 \cdot 10^{14} \frac{m^3}{s^2}}{6600000m}}=7771 \frac{m}{s}$</p>
 			<p>But wait a minute, not all orbits are circles! How can be calculate the orbital velocity in an elliptical oribt? Well, first of all, the velocity varies depending on where in the orbit you are, having a larger velocity in the periapsis than in the apoapsis. But there is an equation here to:
 $$v=\sqrt{\mu \left(\frac{2}{r}-\frac{1}{a}\right)}$$
-$r$ is  here your current distance to the centre of the object you are orbiting, and $a$ is the semi-major axis that we just talked about. Notice that in the case of a circular orbit, $r=a$ so this equation simplifies back to $v=\sqrt{\frac{\mu}{r}}$.
+$r$ is  here your current distance to the centre of the object you are orbiting, and $a$ is the semi-major axis that we just talked about. Notice that in the case of a circular orbit, $r=a$ so this equation simplifies back to $v=\sqrt{\frac{\mu}{r}}$
 			</p>
 		    </div>
 		</div>
