image now, explanation later
Former-commit-id: b93af6a9d921f73325b683793323073c5022264a [formerly ba824682704f8e68ee3ddc92f7d40b8f0aca0c32]
Former-commit-id: f8d06d007d3a55e52665e0e4e00d7683bdb87a96

--- a/learn.html
+++ b/learn.html
@@ -246,6 +246,7 @@ $v$ is of course the velocity. $\mu$ is the gravitational parameter. You would o
 $$v=\sqrt{\mu \left(\frac{2}{r}-\frac{1}{a}\right)}$$
 $r$ is  here your current distance to the centre of the object you are orbiting, and $a$ is the semi-major axis that we just talked about. Notice that in the case of a circular orbit, $r=a$ so this equation simplifies back to $v=\sqrt{\frac{\mu}{r}}$
 			</p>
+			<img src=" class="realsize" src="img/transfer.png"">
 		    </div>
 		</div>
             <div class="col-12 col-m-12">     
