testing geogebra embedding
Former-commit-id: 616463a3cf22e9fd97a6d0e41a2b67a8adbddde3 [formerly 25d09baaed19378788db597ca5823bb119f586d1]
Former-commit-id: 916f09115cffba7e0ca3339213f38c83e879ba37

--- a/rotovator.html
+++ b/rotovator.html
@@ -16,5 +16,17 @@
 You would need the four image files /img/moon.png, /img/blank.png, /img/tether.png, /img/payload.png, this HTML page and the script /js/animationRotovator.js
 </p>
 <script src="js/animationRotovator.js"></script>
+
+<!--start GeoGebra code-->
+<script type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js"></script>
+<script type="text/javascript">
+    var applet1 = new GGBApplet({filename: "GeoGebra/rotovator.ggb","showtoolbar":true}, true);
+    window.onload = function() {
+        applet1.inject('applet_container1', 'preferHTML5');
+    }
+</script>
+<div style="width:907px;height:415px;display:block" id="applet_container1"></div>
+<!--end GeoGebra code-->
+
 </body>
 </html>
