removed duplicated sketchfab stuff, linked to animated rotovators
Former-commit-id: 4aadcebecfea8ef4143612e034271fc9cbffb9df

--- a/learn.html
+++ b/learn.html
@@ -177,16 +177,10 @@
                     </div>
                 </div>
                 <div class="black roundAll">
-                <a href="browsergame/shell.html"><img src="browsergame/images/link.png" alt="go to the browser game!"></a>
+                	<img href="browsergame/shell.html" src="browsergame/images/link.png" alt="go to the browser game!">
                 </div>
                 <div>
-                	<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe><p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-    <a href="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">CP Mission3 Lite</a>
-    by <a href="https://sketchfab.com/briligg?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">briligg</a>
-    on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-</p>
-<a href="rotovator.html">Link to animated rotovator</a>
-
+			<img href="rotovator.html" src="animatedRotovatorLink.png" alt="view the animations!">
                 </div>
                 <div class="black roundAll">
                     <div class="darkYellow pad15 roundAll">
