--- a/learn.html
+++ b/learn.html
@@ -180,7 +180,7 @@
                 	<img href="browsergame/shell.html" src="browsergame/images/link.png" alt="go to the browser game!">
                 </div>
                 <div>
-			<img href="rotovator.html" src="animatedRotovatorLink.png" alt="view the animations!">
+			<img href="rotovator.html" src="img/animatedRotovatorLink.png" alt="view the animations!">
                 </div>
                 <div class="black roundAll">
                     <div class="darkYellow pad15 roundAll">
