--- a/learn.html
+++ b/learn.html
@@ -177,10 +177,10 @@
                     </div>
                 </div>
                 <div class="black roundAll">
-                	<img href="browsergame/shell.html" src="browsergame/images/link.png" alt="go to the browser game!">
+                	<a href="browsergame/shell.html"><img src="browsergame/images/link.png" alt="go to the browser game!"></a>
                 </div>
                 <div>
-			<img href="rotovator.html" src="img/animatedRotovatorLink.png" alt="view the animations!">
+			<a href="rotovator.html"><img class="realsize" width="262" height="254" src="img/animatedRotovatorLink.png" alt="view the animations!"></a>
                 </div>
                 <div class="black roundAll">
                     <div class="darkYellow pad15 roundAll">
