--- a/rotovator.html
+++ b/rotovator.html
@@ -18,14 +18,20 @@ You would need the four image files /img/moon.png, /img/blank.png, /img/tether.p
 <script src="js/animationRotovator.js"></script>
 <p>Here is another version, a rotovator with a lower orbital altitude as a GeoGebra app. Click, drag and zoom to change your view.</p>
 <!--start GeoGebra code-->
-<script type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js"></script>
 <script type="text/javascript">
     var applet1 = new GGBApplet({filename: "GeoGebra/rotovator.ggb","showtoolbar":true}, true);
     window.onload = function() {
         applet1.inject('applet_container1', 'preferHTML5');
     }
 </script>
+<center>
 <div style="width:800px;height:550px;display:block" id="applet_container1"></div>
+</center>
+<script>
+	document.getElementById("applet_container1").width = screen.availWidth - 100;
+	document.getElementById("applet_container1").height = screen.availHeight - 50;
+</script>
+<script type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js"></script>
 <!--end GeoGebra code-->
 <br><br><br>
 </body>
