changing the loading order...
Former-commit-id: bc6bf1b5cd6dc70fd3178af6cd5ad6e8711101b2 [formerly ae9890a31e82b3a7e9e1cb5bc4de089cbd87e6e2]
Former-commit-id: eaf7ab72ed3c0019f2b5f9329453c93bf005ebf9

--- a/rotovator.html
+++ b/rotovator.html
@@ -18,6 +18,7 @@ You would need the four image files /img/moon.png, /img/blank.png, /img/tether.p
 <script src="js/animationRotovator.js"></script>
 <p>Here is another version, a rotovator with a lower orbital altitude as a GeoGebra app. Click, drag and zoom to change your view.</p>
 <!--start GeoGebra code-->
+<script type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js">
 <script type="text/javascript">
     var applet1 = new GGBApplet({filename: "GeoGebra/rotovator.ggb","showtoolbar":true}, true);
     window.onload = function() {
@@ -31,7 +32,6 @@ You would need the four image files /img/moon.png, /img/blank.png, /img/tether.p
 	document.getElementById("applet_container1").width = screen.availWidth - 100;
 	document.getElementById("applet_container1").height = screen.availHeight - 50;
 </script>
-<script type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js"></script>
 <!--end GeoGebra code-->
 <br><br><br>
 </body>
