--- a/rotovator.html
+++ b/rotovator.html
@@ -29,8 +29,8 @@ You would need the four image files /img/moon.png, /img/blank.png, /img/tether.p
 <div style="width:800px;height:550px;display:block" id="applet_container1"></div>
 </center>
 <script>
-	document.getElementById("applet_container1").style.width = screen.availWidth - 100;
-	document.getElementById("applet_container1").style.height = screen.availHeight - 50;
+	document.getElementById("applet_container1").style.width = screen.availWidth - 100 + "px";
+	document.getElementById("applet_container1").style.height = screen.availHeight - 50 + "px";
 </script>
 <!--end GeoGebra code-->
 <br><br><br>
