--- a/rotovator.html
+++ b/rotovator.html
@@ -16,20 +16,16 @@
 You would need the four image files /img/moon.png, /img/blank.png, /img/tether.png, /img/payload.png, this HTML page and the script /js/animationRotovator.js
 </p>
 <script src="js/animationRotovator.js"></script>
-<p>Here is another version, a rotovator with a lower orbital altitude as a GeoGebra app. Click, drag and zoom to change your view.</p>
+
 <!--start GeoGebra code-->
-<script type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js">
+<script type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js"></script>
 <script type="text/javascript">
-	var applet1 = new GGBApplet({filename: "GeoGebra/rotovator.ggb","showtoolbar":true}, true);
-	window.onload = function() {
-		applet1.inject('applet_container1', 'preferHTML5');
-	}
+    var applet1 = new GGBApplet({filename: "GeoGebra/rotovator.ggb","showtoolbar":true}, true);
+    window.onload = function() {
+        applet1.inject('applet_container1', 'preferHTML5');
+    }
 </script>
 <div style="width:800px;height:550px;display:block" id="applet_container1"></div>
-<script>
-//	document.getElementById("applet_container1").style.width = screen.availWidth - 100 + "px";
-//	document.getElementById("applet_container1").style.height = screen.availHeight - 50 + "px";
-</script>
 <!--end GeoGebra code-->
 <br><br><br>
 </body>
