--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/cssportal.tooltip.css">
 <link rel="stylesheet" href="css/main.css">
-<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,300i,400,400i,600" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/modernizr-2.8.3.min.js"></script>
@@ -60,6 +60,7 @@
   			<li><a href="learn.html">Learn</a>
   				<ul>
   					<li><a href="learn.html#interactives">Interactives</a></li>
+  					<li><a href="learn.html#lessons">Lessons</a></li>
   				</ul>
   			<li><a href="why.html">Why</a>
   				<ul>
@@ -375,14 +376,7 @@
 	</div>
 	<div class="rowR">
 		 <div class="col-9 col-m-10 roundLeft black">
-		 <p>This is a rough, partial first draft. At the moment, things are being added quickly and at times 
-it is all rather disorganized. If you return on another day it will be better - or at least disorganized and incomplete in 
-a different place. All the current models and the mission timelines for them are currently slated to be deeply revised by July.
-	 </p>
-		 <p>A few things to expect by then - 
-		 models of a solar thermal power plant and energy storage unit, a reactor for processing 
-		 ilmenite into water and iron, and very large habitation structures... also plans for a nuclear shuttle, 
-		 beanstalk tethers, rovers, and a clearer vision of the business approach. 
+		 <p><i>This is a rough, partial first draft. Things are added or replaced regularly.</i>
 		 </p>
 		 </div>
 		 <br class="clearboth">
