--- a/learn.html
+++ b/learn.html
@@ -26,7 +26,7 @@
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/cssportal.tooltip.css">
-<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,300i,400,400i,600" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
 <style>
 	input, button {
 	color: black;
@@ -77,6 +77,7 @@
   			<li><a href="learn.html">Learn</a>
   				<ul>
   					<li><a href="learn.html#interactives">Interactives</a></li>
+  					<li><a href="learn.html#lessons">Lessons</a></li>
   				</ul>
   			<li><a href="why.html">Why</a>
   				<ul>
@@ -182,15 +183,31 @@
                 <div>
 			<a href="rotovator.html"><img class="realsize" width="262" height="254" src="img/animatedRotovatorLink.png" alt="view the animations!"></a>
                 </div>
-                <div class="black roundAll">
+              <div class="rowL">
+           <h4 class="col-3 col-m-2">A quick introduction to orbital mechanics</h4>   
+                <div class="black col-9 col-m-10">
                     <div class="darkYellow pad15 roundAll">
-			<h3>A quick introduction to orbital mechanics</h3><br>
+			
 			<h5>The basics:</h5>
-			<p>Navigation a spacecraft can best be understood as moving a heavy bowling ball. When it is up to speed, it continues to move, without anything pushing it. What requires effort is to change the direction it is moving, give it more speed, or slow it down. Coasting along is "free". The cost of a maneouver is the required <b>change in velocity</b>, commonly referred to as <b>Delta-v</b>.</p>
-			<p>An orbit is an example of coasting along for free. When in an orbit, a spacecraft does not use its thrusters, and gravity bends its path, most often to an ellipse. Thus, you can leave your spacecraft in an orbit for as long as you like.</p>
-			<p>However, when we want to change our spacecraft's orbit, we have to change our velocity, thus draining from our Delta-v budget. A spacecraft always has a limited amount of Delta-v, so making transfers between orbits as cheap as possible is a major considerations in  spacecraft navigation.</p>
-			<p>Every way of changing the velocity of a spacecraft is based upon the conservation of momentum. That is, if you take every object in a system, multiply their mass and velocity, and take their sum, the value you get is constant. That means throwing propellant in one direction causes something else in to move in the opposite direction in order to keep the momentum constant. That "something" is your spacecraft.</p>
-			<p>The obvious limitation should then be clear: We have a limited amount of propellant to trow away. Making the propellant go faster makes the required amount smaller, so that helps. This is the <b>exhaust velocity of the rocket</b>. Another measure for the exact same thing is <b>Isp</b> (specific impulse). That is just the exhaust velocity divided by the standard gravity at sea level (9.81 m/s²). Here is our first important equation, used to calculate Delta-v:
+			<p>Navigation a spacecraft can best be understood as moving a heavy bowling ball. When it is up to speed, 
+			it continues to move, without anything pushing it. What requires effort is to change the direction it is moving, 
+			give it more speed, or slow it down. Coasting along is "free". The cost of a maneuver is the required 
+			<b>change in velocity</b>, commonly referred to as <b>Delta-v</b>.</p>
+			<p>An orbit is an example of coasting along for free. When in an orbit, a spacecraft does not use its 
+			thrusters, and gravity bends its path, most often to an ellipse. Thus, you can leave your spacecraft in an 
+			orbit for as long as you like.</p>
+			<p>However, when we want to change our spacecraft's orbit, we have to change our velocity, thus draining 
+			from our Delta-v budget. A spacecraft always has a limited amount of Delta-v, so making transfers between 
+			orbits as cheap as possible is a major considerations in  spacecraft navigation.</p>
+			<p>Every way of changing the velocity of a spacecraft is based upon the conservation of momentum. That is, 
+			if you take every object in a system, multiply their mass and velocity, and take their sum, the value you 
+			get is constant. That means throwing propellant in one direction causes something else in to move in the 
+			opposite direction in order to keep the momentum constant. That "something" is your spacecraft.</p>
+			<p>The obvious limitation should then be clear: We have a limited amount of propellant to throw away. Making 
+			the propellant go faster makes the required amount smaller, so that helps. This is the <b>exhaust velocity 
+			of the rocket</b>. Another measure for the exact same thing is <b>Isp</b> (specific impulse). That is just 
+			the exhaust velocity divided by the standard gravity at sea level (9.81 m/s²). Here is our first important 
+			equation, used to calculate Delta-v:
 $$
 \Delta v=v_e \cdot ln\left(\frac{m_{initial}}{m_{final}}\right)
 %Seeing gibberish here instead of an equation? Seems like we screwed up. Please contact us 
@@ -210,17 +227,17 @@ A calculator implementation of this equation is at the top of this page.<br></p>
 			<p>The amount of energy that can be stored as chemical compounds is limited, and chemical rockets are also forced to use less than optimal exhaust products as reaction mass. In general, ligther molecules are better, but no chemical reaction that produces large amount energy also produce hydrogen gas. Nuclear engines bypass this issue by using a reactor to heat the flow of propellant, making use of hydrogen gas possible, this makes the exhaust velocity twice as large as chemical rockets. On the other hand, they often has lower thrust.
 			</p>
 			<h6>Ion engines</h6>
-			<p>If high thurst is not a concern, for instance when the maneuverer can take weeks or months, ion engines can be used. They work by using magnetic or electrostatic forces to accelerate an ionized gas, causing it to reach a very high velocity. This type of engine uses a lot of electricity and the thrust is low, but the efficiency can be far better than both chemical and nuclear rocket engines. A possible use is a cargo craft slowly spiraling between the Moon and low Earth orbit.
+			<p>If high thrust is not a concern, for instance when the maneuver can take weeks or months, ion engines can be used. They work by using magnetic or electrostatic forces to accelerate an ionized gas, causing it to reach a very high velocity. This type of engine uses a lot of electricity and the thrust is low, but the efficiency can be far better than both chemical and nuclear rocket engines. A possible use is a cargo craft slowly spiraling between the Moon and low Earth orbit.
 			</p>
 			<h6>Solar sails</h6>
-			<p>It is technically not necessary to expand propellant. A solar sail uses the minuscle pressure light exerts when it hits something. If you have a very thin and large sail, this force can be used for transportation or station keeping ("hoovering"). The light can also be supplied by external lasers to increase performance, giving $6.67 \cdot 10^{-9} N/W$ for a reflective sail. Solar sails are direction sensitive as they can not tack directly towards the light source. 
+			<p>It is technically not necessary to expand propellant. A solar sail uses the minuscule pressure light exerts when it hits something. If you have a very thin and large sail, this force can be used for transportation or station keeping ("hoovering"). The light can also be supplied by external lasers to increase performance, giving $6.67 \cdot 10^{-9} N/W$ for a reflective sail. Solar sails are direction sensitive as they can not tack directly towards the light source. 
 			</p>
 			<h5>Orbit terminology:</h5>
 			<img class="realsize" src="img/orbit.png" height="519">
 			<p>The following terms are important when describing an orbit:</p>
 			<ul>
-				<li><b>Periapsis:</b> The point where the oribiting craft is <i>closest</i> to the object it orbits.</li>
-				<li><b>Apoapsis:</b> The point where the oribiting craft is <i>farthest</i> from the object it orbits.</li>
+				<li><b>Periapsis:</b> The point where the orbiting craft is <i>closest</i> to the object it orbits.</li>
+				<li><b>Apoapsis:</b> The point where the orbiting craft is <i>farthest</i> from the object it orbits.</li>
 				<li><b>Semi-major axis:</b> The largest central radius of an ellipse. This is half the distance between the periapsis and apoapsis. Often shortened to $a$.</li>
 			</ul>
 			<br>
@@ -251,11 +268,13 @@ $$v_{red}=\sqrt{1\left(\frac{2}{1}-\frac{1}{2}\right)}=1.225$$
 			<img class="realsize" src="img/difference.png">
 		    </div>
 		</div>
+		</div>
             <div class="col-12 col-m-12">     
                 <a href="http://www.gnu.org/licenses/">
                 <p>All calculator scripts are released under GPL 3</p>
                 </a>
             </div>
+    
     </div>
 </div>
 <script>
