--- a/planning.html
+++ b/planning.html
@@ -27,7 +27,7 @@
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/cssportal.tooltip.css">
 <link rel="stylesheet" href="css/accordian.css">
-<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,300i,400,400i,600" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
@@ -65,6 +65,7 @@
   			<li><a href="learn.html">Learn</a>
   				<ul>
   					<li><a href="learn.html#interactives">Interactives</li>
+  					<li><a href="learn.html#lessons">Lessons</a></li>
   				</ul>
   			<li><a href="why.html">Why</a>
   				<ul>
