--- a/rotovator.html
+++ b/rotovator.html
@@ -18,7 +18,7 @@ You would need the four image files /img/moon.png, /img/blank.png, /img/tether.p
 <!--start GeoGebra code-->
 <script type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js"></script>
 <script type="text/javascript">
-    var applet1 = new GGBApplet({filename: "GeoGebra/SuborbitalHop.ggb","showtoolbar":true}, true);
+    var applet1 = new GGBApplet({filename: "rotovator.ggb","showtoolbar":true}, true);
     window.onload = function() {
         applet1.inject('applet_container1', 'preferHTML5');
     }
