--- a/learn.html
+++ b/learn.html
@@ -105,7 +105,7 @@
 	<div class="rowR">
                 <div class="black roundAll">
                     <div class="darkYellow pad15 roundAll">
-                        <h4 class="yellow">The Rocket Equation</h4><br>
+                        <h3 class="yellow">The Rocket Equation</h3><br class="clearboth">
                         <p style="padding:0;">Mass ratio:</p>
                         <input type="text" title="Start mass divided by end mass"
                         placeholder="Start mass divided by end mass" value="" id="massratioRE">
@@ -123,7 +123,7 @@
                 </div>
                 <div class="black roundAll">
                     <div class="darkYellow pad15 roundAll">
-                        <h4 class="yellow">Suborbital Hop</h4><br>
+                        <h3 class="yellow">Suborbital Hop</h3><br class="clearboth">
                         <p style="padding:0;">Initial location:</p>
                         <span>Latitude</span> <input type="text" placeholder="(degrees)" value="" id="latitudeSH">
                         <span>Longitude</span> <input type="text" placeholder="(degrees)" value="" id="longitudeSH">
@@ -149,7 +149,7 @@
                 </div>
                 <div class="black roundAll">
                     <div class="darkYellow pad15 roundAll">
-                      <h4 class="yellow">Lunar Elevator</h4><br>
+                      <h3 class="yellow">Lunar Elevator</h3><br class="clearboth">
                         <p>Start distance: (distances are from the centre of the Moon towards Earth)</p>
                         <input type="text" placeholder="(km)" value="" id="start">
                         <input type="checkbox" id="surface">use lunar surface
@@ -182,7 +182,8 @@
                 <div>
 			<a href="rotovator.html"><img class="realsize" width="262" height="254" src="img/animatedRotovatorLink.png" alt="view the animations!"></a>
                 </div>
-              <div class="rowL">
+        </div>
+        <div class="rowL">
            <h4 class="col-3 col-m-2">A quick introduction to orbital mechanics</h4>   
                 <div class="black col-9 col-m-10">
                     <div class="darkYellow pad15 roundAll">
