--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -67,7 +67,7 @@ color: blue;
         for the JavaScript code in this page.
         */
         </script>
-<p>If you are reading this paragraph, you have a development version of the game. Do not expect anything to work</p>
+<p id="devWarning">If you are reading this paragraph, you have a development version of the game. Do not expect anything to work</p>
 <p style="float: right" id="note"></p>
 <p id="timing" style="color: #b09985">0</p>
 <p><span id="toggle1" class="fastforward" onclick="this.style.background='red';acceleration(1)"><b>></b></span> <span id="toggle2" class="fastforward" onclick="this.style.background='red';acceleration(5)"><b>>></b></span> <span id="toggle3" class="fastforward" onclick="this.style.background='red';acceleration(25)"><b>>>></b></span></p>
@@ -80,6 +80,7 @@ color: blue;
 <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="updateShop();tolk('shop');command='shop'">Shop</div>
 <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('location');command='location'">Locations</div>
 <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('cosmo');command='cosmo'">Cosmonauts</div>
+<div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('moon');command='moon'">The Moon</div>
 <p>
   <a href="tutorial.html">Need a quick tutorial?</a>
 </p>
