--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Browsergame</title>
   <meta charset="UTF-8">
 <!--This game requires 6 files + media in order to work properly.
 if you have downloaded this game for offline use, be sure that you have got the following files:
@@ -67,22 +68,27 @@ color: blue;
         for the JavaScript code in this page.
         */
         </script>
-<p id="devWarning">If you are reading this paragraph, you have a development version of the game. Do not expect anything to work</p>
+<p id="devWarning">If you are reading this paragraph, you have a development version of the game.<br>Do not expect anything to work</p>
 <p style="float: right" id="note"></p>
-<p id="timing" style="color: #b09985">0</p>
-<p><span id="toggle1" class="fastforward" onclick="this.style.background='red';acceleration(1)"><b>></b></span> <span id="toggle2" class="fastforward" onclick="this.style.background='red';acceleration(5)"><b>>></b></span> <span id="toggle3" class="fastforward" onclick="this.style.background='red';acceleration(25)"><b>>>></b></span></p>
-<p id="budget">Budget: <span style="color: #e02200">1000</span></p>
-<span id="toggelino" onclick="toggleCommand()" class="blue" onmouseover="this.style.background='#202040';" onmouseout="this.style.background='black';">Show command line</span>
-<span id="hidden"></span>
+<div id="navigation" style="float:left;padding-right:20px">
+  <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="science();tolk('rd');command='rd'">R&amp;D</div>
+  <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('launch');command='launch'">Launch</div>
+  <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="updateShop();tolk('shop');command='shop'">Shop</div>
+  <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('location');command='location'">Locations</div>
+  <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('cosmo');command='cosmo'">Cosmonauts</div>
+  <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('moon');command='moon'">The Moon</div>
+</div>
+<div id="controllers">
+  <p id="timing" style="color: #b09985">0</p>
+  <p><span id="toggle1" class="fastforward" onclick="this.style.background='red';acceleration(1)"><b>></b></span> <span id="toggle2" class="fastforward" onclick="this.style.background='red';acceleration(5)"><b>>></b></span> <span id="toggle3" class="fastforward" onclick="this.style.background='red';acceleration(25)"><b>>>></b></span></p>
+  <p id="budget">Budget: <span style="color: #e02200">1000</span></p>
+  <span id="toggelino" onclick="toggleCommand()" class="blue" onmouseover="this.style.background='#202040';" onmouseout="this.style.background='black';">Show command line</span>
+  <span id="hidden"></span>
+</div>
+<br>
 <p id="c0"></p><p id="c1"></p><p id="c2"></p><p id="c3"></p><p id="c4"></p><p id="c5"></p><p id="c6"></p><p id="c7"></p><p id="c8"></p><p id="c9"></p><p id="c10"></p><p id="c11"></p><p id="c12"></p><p id="c13"></p><p id="c14"></p><p id="c15"></p><p id="c16"></p><p id="c17"></p><p id="c18"></p><p id="c19"></p>
-<div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="science();tolk('rd');command='rd'">R&amp;D</div>
-<div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('launch');command='launch'">Launch</div>
-<div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="updateShop();tolk('shop');command='shop'">Shop</div>
-<div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('location');command='location'">Locations</div>
-<div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('cosmo');command='cosmo'">Cosmonauts</div>
-<div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('moon');command='moon'">The Moon</div>
 <p>
-  <a href="tutorial.html">Need a quick tutorial?</a>
+  <a href="tutorial.html">Do you need a quick tutorial?</a>
 </p>
 <img src="images/hoh.gif" onclick="(tolk('about'))" onmouseover="this.style.transform='rotateZ(12deg)'" onmouseout="this.style.transform='rotateZ(0deg)'">
 <p>All javaScript used on this page is free software, licensed under the GPL</p>
